build_log.txt
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/C:/Users/henry/.gradle/wrapper/dists/gradle-9.2.0-bin/11i5gvueggl8a5cioxuftxrik/gradle-9.2.0/lib/native-platform-0.22-milestone-29.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

> Task :compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE

> Task :compileTestJava FAILED
C:\Users\henry\OneDrive\Documents\CompSciClasses\SoftwareDev\Homework2\ts-1-2-16\src\test\java\ProjectControlTest.java:26: error: ';' expected
        MockitoAnnotations.openMocks(this)l;
                                          ^
1 error

[Incubating] Problems report is available at: file:///C:/Users/henry/OneDrive/Documents/CompSciClasses/SoftwareDev/Homework2/ts-1-2-16/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\henry\OneDrive\Documents\CompSciClasses\SoftwareDev\Homework2\ts-1-2-16\src\test\java\ProjectControlTest.java:26: error: ';' expected
          MockitoAnnotations.openMocks(this)l;
                                            ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 1s
2 actionable tasks: 1 executed, 1 up-to-date
